--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "firebase": "^9.8.1",
     "perfect-freehand": "^1.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
