--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.1",
     "react-scroll": "^1.8.7",
     "roughjs": "^4.5.2",
+    "save-svg-as-png": "^1.4.17",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
@@ -46,6 +47,7 @@
     "prettier": "^2.6.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "ttf-loader": "^1.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
