--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack --config webpack.config.js --mode production"
+    "start": "webpack-dev-server --config webpack.config.dev.js --open",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +15,10 @@
     "perfect-freehand": "^1.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^5.3.1",
+    "react-router-dom": "^5.3.2",
     "react-scroll": "^1.8.7",
     "roughjs": "^4.5.2",
     "save-svg-as-png": "^1.4.17",
