--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "perfect-freehand": "^1.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.2",
     "react-scroll": "^1.8.7",
+    "reactfire": "^4.2.1",
     "roughjs": "^4.5.2",
     "save-svg-as-png": "^1.4.17",
     "styled-components": "^5.3.5",
