--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "reactfire": "^4.2.1",
     "roughjs": "^4.5.2",
     "save-svg-as-png": "^1.4.17",
+    "spinners-react": "^1.0.7",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
