--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "perfect-freehand": "^1.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.2",
