--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/runtime": "^7.18.3",
     "@reduxjs/toolkit": "^1.8.1",
     "firebase": "^9.8.1",
     "perfect-freehand": "^1.0.16",
@@ -20,7 +21,6 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.2",
     "react-scroll": "^1.8.7",
-    "reactfire": "^4.2.1",
     "roughjs": "^4.5.2",
     "save-svg-as-png": "^1.4.17",
     "spinners-react": "^1.0.7",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/eslint-plugin": "^7.17.7",
+    "@babel/plugin-transform-runtime": "^7.18.2",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@svgr/webpack": "^6.2.1",
