--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ firebase-debug.*.log*
 firebase.json
 firestore.rules
 firestore.indexes.json
+apiKey.js
 
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
